tools/tests/errors/tensor_sqrt_negative.ki
discard import("tensor").Tensor([0 - 1.0]).sqrt()
